# aichallenge2023-racing

docker/aichallenge/: build_autoware.sh
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/cpp_pathwithlaneid_pubsub/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/cpp_pathwithlaneid_pubsub/src/: cpp_pathwithlaneid_pubsub.cpp  cpp_pathwithlaneid_pubsub.hpp  cpp_pathwithlaneid_pubsub_impl.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/cpp_pubsub/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/my_cpp_lqr/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/my_cpp_lqr/include/: cpprobotics_types.h  cubic_spline.h  motion_model.h
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/my_cpp_lqr/src/: my_cpp_lqr.cpp  my_cpp_lqr.hpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/my_pure_pursuit/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/my_pure_pursuit/src/: my_pure_pursuit.hpp  my_pure_pursuit_impl.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/path_subscriber/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/py_path_subscriber/: package.xml  setup.cfg  setup.py
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/py_pathwithlaneid_pubsub/: package.xml  setup.cfg  setup.py
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/py_pubsub/: package.xml  (+1 more)
docker/train/path_subscriber/: CMakeLists.txt  package.xml
(+10 files in other folders)
